--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    This is a test. I hope this paragraph shows up and doesn't break our project.
 </body>
 </html>
