--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
+<!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://bootswatch.com/3/cosmo/bootstrap.min.css">
-        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
-        <!-- FRAMEWORK.JS -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-        <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>  
-        <!-- CSS -->
-        <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" /> 
-        <link type="text/css" rel="stylesheet" src="assets/css/style.css" /> 
-        <!-- SCRIPT -->
-        <script src="assets/javascript/app.js"></script>
-        <script src="assets/javascript/api.js"></script>
-        <title>Lounge Room</title>
-        <link rel="icon" type="image/x-icon" href="assets/images/icon.png">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://bootswatch.com/3/cosmo/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
+    <!-- FRAMEWORK.JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
+    <!-- CSS -->
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
+    <link type="text/css" rel="stylesheet" src="assets/css/style.css" />
+    <!-- SRC SCRIPTS -->
+    <script src="assets/javascript/app.js"></script>
+    <script src="assets/javascript/api.js"></script>
+    <script src="assets/javascript/music-lounge.js"></script>
+    <script src="assets/javascript/lastfm.js"></script>
+
+    <title>Lounge Room</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/icon.png">
+</head>
 <!-- BODY -->
+
 <body background="assets/images/bg.gif">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -45,7 +50,8 @@
                 </ul>
                 <form class="navbar-form navbar-left" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control" style="width: 400px;" placeholder="Search by artist, album or Tracks" id="search">
+                        <input type="text" class="form-control" style="width: 400px;"
+                            placeholder="Search by artist, album or Tracks" id="search">
                     </div>
                     <button type="button" class="btn btn-default-right" id="btnSearch">Search</button>
                     <button type="button" class="btn btn-default-right locationBtn">Top Tracks</button>
@@ -66,8 +72,6 @@
         <div class="row">
             <div class="col-xs-12">
                 <div id="signin"></div>
-                <div id="locationMsg"></div>
-                <!--adding message to show location search results-->
                 <div id="results">
                     <div class="jumbotron" style="background-color: rgba(245,245,245,.55)">
                         <h1>Welcome to Lounge Room!</h1>
@@ -86,7 +90,7 @@
                                 <h4 class="modal-title">Sign In to Save Favorites!</h4>
                             </div>
                             <div class="modal-body" id="firebaseui-auth-container">
-                    <!-- Script -->
+                                <!-- Script -->
                                 <script type="text/javascript">
                                     var uiConfig = {
                                         signInSuccessUrl: 'index.html',
@@ -102,7 +106,7 @@
                                     var ui = new firebaseui.auth.AuthUI(firebase.auth());
                                     ui.start('#firebaseui-auth-container', uiConfig);  
                                 </script>
-                    <!-- END Script -->
+                                <!-- END Script -->
                             </div>
                             <div class="modal-footer">
                                 <button type="button" id="cancel" class="btn btn-default cancelLogin"
