--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
@@ -14,12 +14,10 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.js"></script>
     <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
-    <link type="text/css" rel="stylesheet" src="assets/css/style.css" />
     <!-- SRC SCRIPTS -->
     <script src="assets/javascript/app.js"></script>
-    <script src="assets/javascript/api.js"></script>
-    <script src="assets/javascript/music-lounge.js"></script>
     <script src="assets/javascript/lastfm.js"></script>
 
     <title>Lounge Room</title>
@@ -27,8 +25,9 @@
 </head>
 <!-- BODY -->
 
-<body background="assets/images/bg.gif">
+<body>
     <nav class="navbar navbar-default">
+        <!-- NAV START -->
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
@@ -67,57 +66,80 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> <!-- NAV END -->
+
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+
+            <div class="col-xs-6">
                 <div id="signin"></div>
-                <div id="results">
-                    <div class="jumbotron" style="background-color: rgba(245,245,245,.55)">
-                        <h1>Welcome to Lounge Room!</h1>
-                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam laborum nobis eligendi animi
-                            architecto id natus ut nisi neque iure suscipit impedit, fugit autem libero, repudiandae sit
-                            facilis explicabo laudantium!</p>
-                    </div>
+                <div class="jumbotron" style="background-color: rgba(245,245,245,.55)">
+                    <h1>Welcome to Lounge Room!</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam laborum nobis eligendi animi
+                        architecto id natus ut nisi neque iure suscipit impedit, fugit autem libero, repudiandae sit
+                        facilis explicabo laudantium!</p>
+                </div> <!-- jumbo end -->
+            </div> <!-- column end -->
+
+            <div class="col-xs-6">
+                <h2>Chat Room</h2>
+                <hr>
+
+                <div class="jumbotron" id="chat"> 
+                    <!-- populate text messages here -->
+                </div>
+                    <input type="text" class="form-control" placeholder="Send Message" id="search">
+                        <br>
+                    <button type="button" class="btn btn-default-right" id="chatBtn">Send</button>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div id="recent-searches">
+
                 </div>
 
-                <div id="loginModal" class="modal fade" role="dialog">
-                    <div class="modal-dialog">
-                        <!-- Modal content-->
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close cancelLogin" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Sign In to Save Favorites!</h4>
-                            </div>
-                            <div class="modal-body" id="firebaseui-auth-container">
-                                <!-- Script -->
-                                <script type="text/javascript">
-                                    var uiConfig = {
-                                        signInSuccessUrl: 'index.html',
-                                        signInOptions: [
-                                            // providers  
-                                            firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-                                            firebase.auth.EmailAuthProvider.PROVIDER_ID
-                                        ],
-                                        // TODO: add terms of service url  
-                                        tosUrl: '<your-tos-url>'
-                                    };
-                                    // InitializeFirebaseUI Widget 
-                                    var ui = new firebaseui.auth.AuthUI(firebase.auth());
-                                    ui.start('#firebaseui-auth-container', uiConfig);  
-                                </script>
-                                <!-- END Script -->
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" id="cancel" class="btn btn-default cancelLogin"
-                                    data-dismiss="modal">Cancel</button>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+        </div>
+
+    </div> <!-- CONTAINER END -->
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close cancelLogin" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Sign in to use the Chat Room!</h4>
+                </div>
+                <div class="modal-body" id="firebaseui-auth-container">
+                    <!-- START Script -->
+                    <script type="text/javascript">
+                        var uiConfig = {
+                            signInSuccessUrl: 'index.html',
+                            signInOptions: [
+                                // providers  
+                                firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                                firebase.auth.EmailAuthProvider.PROVIDER_ID
+                            ],
+                        };
+                        // InitializeFirebaseUI Widget 
+                        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+                        ui.start('#firebaseui-auth-container', uiConfig);  
+                    </script> <!-- SCRIPT END -->
+                    <!-- END Script -->
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" id="cancel" class="btn btn-default cancelLogin"
+                        data-dismiss="modal">Cancel</button>
                 </div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
