Edit to have top artists populate on page load

--- a/index1.html
+++ b/index1.html
@@ -120,6 +120,13 @@
  <script src="assets/javascript/app.js"></script>
  <script src="assets/javascript/api.js"></script>
  <script src="assets/javascript/lastfm.js"></script>
+
+ <script>
+ $(document).ready(function() {
+    getTopArtists();
+
+ });
+ </script>
 </body>
 
 </html>
