I dont even know

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
                 <div class="jumbotron" style="background-color: rgba(245,245,245,.55)">
                     <h1>Welcome to Lounge Room!</h1>
                       <!-- Top Artist div -->
-                      <p id="top-artists"></p>
+                      <h4>Top Artists</h4>
+                      <p id="top-artists"> </p>
+                    <!-- Artist Bio -->
+                    <p id="artist-bio"> </p>
+
                       <!-- Top Tracks div -->
                       <p id="top-tracks"></p>
                 </div> <!-- jumbo end -->
