--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         // InitializeFirebaseUI Widget 
                         var ui = new firebaseui.auth.AuthUI(firebase.auth());
                         ui.start('#firebaseui-auth-container', uiConfig);  
-                    </script> <!-- SCRIPT END -->
+                    </script>
                     <!-- END Script -->
                 </div>
 
